test/error/ast/CaseLabelWrongType.mod
MODULE CaseLabelWrongType;
VAR x: INTEGER;
BEGIN
  CASE x OF TRUE: END;
END CaseLabelWrongType.
